49회차: Spring <-> Python 통신

--- a/python/fifth.ipynb
+++ b/python/fifth.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "db448bc5",
+   "id": "03f68046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b90c7d35",
+   "id": "4afaf615",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "86e72891",
+   "id": "0ca4faae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8486fa7a",
+   "id": "2c088d7b",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [04/Oct/2022 16:06:44] \"GET /python-request HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "스프링 요청 성공!\n"
      ]
     }
    ],
@@ -85,7 +93,7 @@
     "app = Flask(__name__)\n",
     "\n",
     "@app.route('/python-request', methods=['GET'])\n",
-    "def spring2pythonRequest():\n",
+    "def spring2python():\n",
     "    print(\"스프링 요청 성공!\")\n",
     "    data = {\"spring2python Success!\": True}\n",
     "    \n",
@@ -98,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c098b24b",
+   "id": "040629bd",
    "metadata": {},
    "outputs": [],
    "source": []
