49회차: Spring 엔티티 <-> Python 통신

--- a/python/fifth.ipynb
+++ b/python/fifth.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "03f68046",
+   "id": "a0b41604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4afaf615",
+   "id": "a625cdd3",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0ca4faae",
+   "id": "597611ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c088d7b",
+   "execution_count": 10,
+   "id": "c1fe3110",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.9.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ef9451f6",
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +96,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [04/Oct/2022 16:06:44] \"GET /python-request HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [04/Oct/2022 16:47:14] \"POST /python-request-realdata HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "스프링 요청 성공!\n"
+      "params:  {'cost': 35000}\n"
      ]
     }
    ],
@@ -99,6 +117,29 @@
     "    \n",
     "    return jsonify(data)\n",
     "\n",
+    "@app.route('/python-request-multi', methods=['GET'])\n",
+    "def spring2python_multi():\n",
+    "    data = {\"Success\": True}\n",
+    "    \n",
+    "    data[\"userId\"] = \"blablaId\"\n",
+    "    data[\"email\"] = \"blablabla@gmail.com\"\n",
+    "    \n",
+    "    return jsonify(data)\n",
+    "\n",
+    "@app.route('/python-request-realdata', methods=['POST'])\n",
+    "def spring2python_realdata():\n",
+    "    params = json.loads(request.get_data())\n",
+    "    print(\"params: \", params)\n",
+    "    \n",
+    "    if len(params) == 0:\n",
+    "        return jsonify(\"No Parameter!\")\n",
+    "    \n",
+    "    params_string = \"\"\n",
+    "    for key in params.keys():\n",
+    "        params_string += 'key: {}, value: {}<br>'.format(key, params[key])\n",
+    "    \n",
+    "    return jsonify(params_string)\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    app.run()"
    ]
@@ -106,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "040629bd",
+   "id": "a70a18c5",
    "metadata": {},
    "outputs": [],
    "source": []
