--- a/python/sixth.ipynb
+++ b/python/sixth.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "81da8c00",
+   "id": "86c36804",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e804d933",
+   "id": "76d62a13",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af70aaf8",
+   "id": "aae8941a",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2864eda5",
+   "id": "4814cbda",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c49c148",
+   "id": "d99c39a5",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "310de8f7",
+   "id": "608abecf",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fe677a0a",
+   "id": "6b2212b5",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c916f37",
+   "id": "f2e32477",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "531dd324",
+   "id": "0a2de4a9",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cad12515",
+   "id": "08fee2f8",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "874841e9",
+   "id": "ab116c9d",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2deebd07",
+   "id": "ec94cdb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7ad7027a",
+   "id": "bd5a6a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ec5e851a",
+   "id": "4f7fffa2",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "64411a07",
+   "id": "8c69fdfa",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c62bbe60",
+   "id": "9dff4cc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f31bf1fb",
+   "id": "618fff01",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "02ed7a1e",
+   "id": "dbcfcfb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,10 +1122,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d389d682",
+   "id": "a3662903",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "fb319027",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 카카오 개발자 사이트로 이동\n",
+    "# https://developers.kakao.com/\n",
+    "# 로그인\n",
+    "# 내 애플리케이션\n",
+    "# 애플리케이션 추가하기\n",
+    "# 앱 이름 및 사업자등록번호상 사업주 작성\n",
+    "# 생성 이후 만든 녀석 클릭\n",
+    "# 여러가지 키 값들이 보임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9eadfb1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 카톡 메시지 연동\n",
+    "# 애플리케이션 'kh-본인이름' 으로 이동\n",
+    "# 카카오 로그인 활성화 설정 ON\n",
+    "# 동의항목 - 닉네임: 필수\n",
+    "# 동의항목 - 카카오계정(이메일): 선택 동의\n",
+    "# 동의항목 - 카톡 서비스 친구목록: 이용 중 동의\n",
+    "# 동의항목 - 메시지 전송: 선택 동의\n",
+    "# 카카오 로그인 - Redirect URI -> https://localhost.com\n",
+    "# 플랫폼 - Web -> https://localhost.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d7384e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 토큰 발급\n",
+    "# /oauth/authorize?client_id=${REST_API_KEY}&redirect_uri=${REDIRECT_URI}&response_type=code\n",
+    "# Host\n",
+    "# kauth.kakao.com\n",
+    "# 아래 URL로 요청을 보내면 토큰을 발급 받을 수 있게 된다.\n",
+    "\n",
+    "# https://kauth.kakao.com/oauth/authorize?client_id=${REST_API_KEY}&redirect_uri=\"https://localhost.com\"&response_type=code\n",
+    "# REST_API_KEY는 사람마다 다르니까 구별해서 배치하도록 한다.\n",
+    "# 이 부분은 공개하면 해킹당하니까 주의하도록 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b08c39b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
