50회차: python 카톡 메시지 연동

--- a/python/sixth.ipynb
+++ b/python/sixth.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "86c36804",
+   "id": "193ed3cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "76d62a13",
+   "id": "3ddc2e26",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aae8941a",
+   "id": "de0f847e",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4814cbda",
+   "id": "f2cff575",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d99c39a5",
+   "id": "c93c79b0",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "608abecf",
+   "id": "52955b33",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b2212b5",
+   "id": "f3cbed5e",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f2e32477",
+   "id": "ea6f9da3",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0a2de4a9",
+   "id": "60de0179",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "08fee2f8",
+   "id": "754416dd",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ab116c9d",
+   "id": "73f45ecb",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ec94cdb3",
+   "id": "2bd69dbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bd5a6a40",
+   "id": "1ce20198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4f7fffa2",
+   "id": "d9c45199",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8c69fdfa",
+   "id": "3e10c2c0",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9dff4cc7",
+   "id": "0cd142d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "618fff01",
+   "id": "a7c704fd",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "dbcfcfb3",
+   "id": "74a837cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3662903",
+   "id": "79443672",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fb319027",
+   "id": "740b9c78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9eadfb1a",
+   "id": "3abbc574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7384e0",
+   "id": "485ac06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,22 +1175,164 @@
     "# kauth.kakao.com\n",
     "# 아래 URL로 요청을 보내면 토큰을 발급 받을 수 있게 된다.\n",
     "\n",
-    "# https://kauth.kakao.com/oauth/authorize?client_id=${REST_API_KEY}&redirect_uri=\"https://localhost.com\"&response_type=code\n",
+    "# https://kauth.kakao.com/oauth/authorize?client_id=${REST_API_KEY}&redirect_uri=https://localhost.com&response_type=code\n",
     "# REST_API_KEY는 사람마다 다르니까 구별해서 배치하도록 한다.\n",
-    "# 이 부분은 공개하면 해킹당하니까 주의하도록 한다."
+    "# 이 부분은 공개하면 해킹당하니까 주의하도록 한다.\n",
+    "\n",
+    "# 입력후 나온 결과가 URL상에 있음\n",
+    "# code=  <<< 뒷 부분을 싹 복사해서 아래쪽 code에 배치한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ff8bf7ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokens' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [32]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     token \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mtokens\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tokens' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://kauth.kakao.com/oauth/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"grant_type\": \"authorization_code\",\n",
+    "    \"client_id\": \"YourRestAPI\",\n",
+    "    \"redirect_uri\": \"https://localhost.com\",\n",
+    "    \"code\": \"토큰발급으로 나타난 결과\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, data=data)\n",
+    "\n",
+    "if response.status_code != 200:\n",
+    "    print(\"에러!\")\n",
+    "else:\n",
+    "    token = response.json()\n",
+    "    print(token)\n",
+    "    # tokens라고 해서 에러났음(token 받은 상태)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b08c39b",
+   "id": "bda8e9b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import json\n",
-    "\n"
+    "print(token)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "dba6bf9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import datetime\n",
+    "import os\n",
+    "\n",
+    "# jupyter notebook 구동되는 위치에 kakao_msg 디렉토리 만들어야함\n",
+    "KAKAO_TOKEN_SAVED_FILE = \"kakao_msg/kakao_token.json\"\n",
+    "\n",
+    "def save_tokens(file, token):\n",
+    "    with open(file, \"w\") as fp:\n",
+    "        json.dump(token, fp)\n",
+    "        \n",
+    "def load_tokens(file):\n",
+    "    with open(file) as fp:\n",
+    "        token = json.load(fp)\n",
+    "        \n",
+    "    return token\n",
+    "\n",
+    "save_tokens(KAKAO_TOKEN_SAVED_FILE, token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7ff8348a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "728e7c7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "token = load_tokens(KAKAO_TOKEN_SAVED_FILE)\n",
+    "\n",
+    "url = \"https://kapi.kakao.com/v2/api/talk/memo/default/send\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + token['access_token']\n",
+    "}\n",
+    "\n",
+    "data = {\n",
+    "    \"template_object\": json.dumps({\n",
+    "        \"object_type\": \"text\",\n",
+    "        \"text\": \"메시지 테러\",\n",
+    "        \"link\": {\n",
+    "            \"web_url\": \"https://youtu.be/jb-LYIlazzk\"\n",
+    "        }\n",
+    "    })\n",
+    "}\n",
+    "\n",
+    "for i in range(10):\n",
+    "    response = requests.post(url, headers=headers, data=data)\n",
+    "    sleep(1)\n",
+    "    print(response.status_code)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6f92170",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "717df50b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
