50회차: 카톡 메시지 유튜브 연결안됨 해결

--- a/python/sixth.ipynb
+++ b/python/sixth.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "193ed3cf",
+   "id": "5e53e8b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3ddc2e26",
+   "id": "feb36d08",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "de0f847e",
+   "id": "39168ac1",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f2cff575",
+   "id": "ee54161c",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c93c79b0",
+   "id": "1ff0cdfc",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "52955b33",
+   "id": "19be65f7",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f3cbed5e",
+   "id": "8bae1c2d",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ea6f9da3",
+   "id": "e84ddfd4",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "60de0179",
+   "id": "70719da4",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "754416dd",
+   "id": "4a6ba1d5",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "73f45ecb",
+   "id": "da944ae1",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2bd69dbf",
+   "id": "a983ebce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1ce20198",
+   "id": "cb3df64b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d9c45199",
+   "id": "6c4e5747",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3e10c2c0",
+   "id": "f37d818f",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0cd142d4",
+   "id": "f8e06684",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a7c704fd",
+   "id": "ccf75e87",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "74a837cc",
+   "id": "90d8431f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79443672",
+   "id": "70f3dcc2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "740b9c78",
+   "id": "608fadc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3abbc574",
+   "id": "37c89ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "485ac06c",
+   "id": "40f8fa81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,6 +1179,7 @@
     "# REST_API_KEY는 사람마다 다르니까 구별해서 배치하도록 한다.\n",
     "# 이 부분은 공개하면 해킹당하니까 주의하도록 한다.\n",
     "\n",
+    "# https://kauth.kakao.com/oauth/authorize?client_id=12312312312312312312312&redirect_uri=https://localhost.com&response_type=code\n",
     "# 입력후 나온 결과가 URL상에 있음\n",
     "# code=  <<< 뒷 부분을 싹 복사해서 아래쪽 code에 배치한다."
    ]
@@ -1186,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ff8bf7ef",
+   "id": "845c9c6e",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda8e9b4",
+   "id": "5ff9b5f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dba6bf9c",
+   "id": "c190ea03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7ff8348a",
+   "id": "266898dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,23 +1273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "728e7c7a",
+   "execution_count": 46,
+   "id": "53c74e51",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
       "200\n"
      ]
     }
@@ -1307,12 +1299,54 @@
     "        \"object_type\": \"text\",\n",
     "        \"text\": \"메시지 테러\",\n",
     "        \"link\": {\n",
-    "            \"web_url\": \"https://youtu.be/jb-LYIlazzk\"\n",
-    "        }\n",
+    "            \"web_url\": \"https://www.youtube.com/watch?v=jb-LYIlazzk\"\n",
+    "        },\n",
+    "        \"button_title\": \"여윽시\"\n",
     "    })\n",
     "}\n",
     "\n",
-    "for i in range(10):\n",
+    "data2 = {\n",
+    "    \"template_object\": json.dumps({\n",
+    "        \"object_type\": \"list\",\n",
+    "        \"header_title\": \"WEEKELY MAGAZINE\",\n",
+    "        \"header_link\": {\n",
+    "            \"web_url\": \"http://www.daum.net\",\n",
+    "            \"mobile_web_url\": \"http://m.daum.net\",\n",
+    "            \"android_execution_params\": \"main\",\n",
+    "            \"ios_execution_params\": \"main\"\n",
+    "        },\n",
+    "        \"contents\": [\n",
+    "            {\n",
+    "                \"title\": \"자전거 라이더를 위한 공간\",\n",
+    "                \"description\": \"매거진\",\n",
+    "                \"image_url\": \"https://mud-kage.kakao.com/dn/QNvGY/btqfD0SKT9m/k4KUlb1m0dKPHxGV8WbIK1/openlink_640x640s.jpg\",\n",
+    "                \"image_width\": 640,\n",
+    "                \"image_height\": 640,\n",
+    "                \"link\": {\n",
+    "                    \"web_url\": \"http://www.daum.net/contents/1\",\n",
+    "                    \"mobile_web_url\": \"http://m.daum.net/contents/1\",\n",
+    "                    \"android_execution_params\": \"/contents/1\",\n",
+    "                    \"ios_execution_params\": \"/contents/1\"\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"title\": \"비쥬얼이 끝내주는 오레오 카푸치노\",\n",
+    "                \"description\": \"매거진\",\n",
+    "                \"image_url\": \"https://mud-kage.kakao.com/dn/boVWEm/btqfFGlOpJB/mKsq9z6U2Xpms3NztZgiD1/openlink_640x640s.jpg\",\n",
+    "                \"image_width\": 640,\n",
+    "                \"image_height\": 640,\n",
+    "                \"link\": {\n",
+    "                    \"web_url\": \"http://www.daum.net/contents/2\",\n",
+    "                    \"mobile_web_url\": \"http://m.daum.net/contents/2\",\n",
+    "                    \"android_execution_params\": \"/contents/2\",\n",
+    "                    \"ios_execution_params\": \"/contents/2\"\n",
+    "                }\n",
+    "            }\n",
+    "        ]\n",
+    "    })\n",
+    "}\n",
+    "\n",
+    "for i in range(1):\n",
     "    response = requests.post(url, headers=headers, data=data)\n",
     "    sleep(1)\n",
     "    print(response.status_code)\n"
@@ -1321,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f92170",
+   "id": "8e549dd8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1329,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717df50b",
+   "id": "6e84e356",
    "metadata": {},
    "outputs": [],
    "source": []
