50회차: 친구 카톡 보내기 해결할 수 없는 문제 발생

--- a/python/sixth.ipynb
+++ b/python/sixth.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e53e8b9",
+   "id": "4db01e98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "feb36d08",
+   "id": "9044e84a",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "39168ac1",
+   "id": "ad0e41e3",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ee54161c",
+   "id": "38752a0b",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1ff0cdfc",
+   "id": "2d7deacb",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "19be65f7",
+   "id": "d50adeb2",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8bae1c2d",
+   "id": "696dbd20",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e84ddfd4",
+   "id": "5ce0a6d8",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "70719da4",
+   "id": "7d694f0f",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4a6ba1d5",
+   "id": "420a742b",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da944ae1",
+   "id": "c9e52f67",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a983ebce",
+   "id": "7fa0002a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cb3df64b",
+   "id": "ae059183",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6c4e5747",
+   "id": "bdb6e7ee",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f37d818f",
+   "id": "c421ef98",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f8e06684",
+   "id": "ffea280e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ccf75e87",
+   "id": "1a99dca6",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "90d8431f",
+   "id": "e54c1b05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f3dcc2",
+   "id": "da446209",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "608fadc0",
+   "id": "25f89c8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "37c89ef8",
+   "id": "fd404bf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f8fa81",
+   "id": "1a9eee5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "845c9c6e",
+   "id": "1f720742",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff9b5f3",
+   "id": "1e1ffe57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c190ea03",
+   "id": "5c366595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "266898dc",
+   "id": "dda69fd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "53c74e51",
+   "id": "165b5c51",
    "metadata": {},
    "outputs": [
     {
@@ -1355,18 +1355,107 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e549dd8",
+   "id": "372617c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 친구 메시지 보내기\n",
+    "# https://kauth.kakao.com/oauth/authorize?client_id=1243934573496367396347986&redirect_uri=https://localhost.com&response_type=code&scope=talk_message,friends\n",
+    "# 결론적으로 기존 개인 메시지와 차이점이라면 &scope=talk_message,friends 이 추가되었다는 부분이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "50e08ab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'access_token': 'evcJJ__dJcDN8i3TEy_-ji_IVl1Mdopghn_V6OQGCj11mgAAAYOn3R_B', 'token_type': 'bearer', 'refresh_token': 'LAIh48XUy9ckFrO2278g6RLI1tP_JZRfpvJ2NHTyCj11mgAAAYOn3R_A', 'expires_in': 21599, 'scope': 'account_email talk_message profile_nickname friends', 'refresh_token_expires_in': 5183999}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 23095w7eorsufosdgusldfuglsdfuglssdfgosd983467834068eprgpsfghlsdfgu30463846udgld\n",
+    "KAKAO_FRIENDS_TOKEN_SAVED_FILE = \"kakao_msg/kakao_friends_token.json\"\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "url = \"https://kauth.kakao.com/oauth/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"grant_type\": \"authorization_code\",\n",
+    "    \"client_id\": \"MyRestAPI\",\n",
+    "    \"redirect_uri\": \"https://localhost.com\",\n",
+    "    \"code\": \"발급된토큰\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, data=data)\n",
+    "\n",
+    "if response.status_code != 200:\n",
+    "    print(\"에러!\")\n",
+    "else:\n",
+    "    token = response.json()\n",
+    "    print(token)\n",
+    "    # tokens라고 해서 에러났음(token 받은 상태)\n",
+    "    \n",
+    "save_tokens(KAKAO_FRIENDS_TOKEN_SAVED_FILE, token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "641ded3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 카카오 앱에서 팀원 초대 이후 -> 팀원 메일로 초대가 날아가며 이를 승인해야 작업이 가능함\n",
+    "token = load_tokens(KAKAO_FRIENDS_TOKEN_SAVED_FILE)\n",
+    "\n",
+    "friends_url = \"https://kapi.kakao.com/v1/api/talk/friends\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + token['access_token']\n",
+    "}\n",
+    "\n",
+    "res = json.loads(requests.get(friends_url, headers=headers).text)\n",
+    "print(type(res))\n",
+    "\n",
+    "friends_list_uuid = []\n",
+    "friends_list = res.get(\"elements\")\n",
+    "\n",
+    "for i in range(len(friends_list)):\n",
+    "    friends_list_uuid.append(friends_list[i].get(\"uuid\"))\n",
+    "    \n",
+    "print(friends_list_uuid)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e84e356",
+   "id": "78807734",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 현재 카카오 정책상 친구 보내기가 상당히 애매해짐\n",
+    "# 과거에는 하루에 30개인가 50개까지 공짜로 가능했음\n",
+    "# url = \"https://kapi.kakao.com/v1/api/talk/friends/message/default/send\"\n",
+    "\n",
+    "# 자기 자신에게 메시지 보내기는 아래 문서를 참고해서 기능을 조금 더 추가할 수 있다.\n",
+    "# https://developers.kakao.com/docs/latest/ko/message/rest-api"
+   ]
   }
  ],
  "metadata": {
