51회차: python 네이버 이메일 + 카카오 메시지 연동

--- a/python/sixth.ipynb
+++ b/python/sixth.ipynb
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "5c366595",
    "metadata": {},
    "outputs": [],
@@ -1263,17 +1263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "dda69fd6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep"
+    "from time import sleep\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "165b5c51",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n"
+      "401\n"
      ]
     }
    ],
