51회차: 주문 결제 상황에서 메일 처리 + 카톡 알림 처리

--- a/python/seventh.ipynb
+++ b/python/seventh.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ecee3f84",
+   "id": "c746ceea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea1d97dd",
+   "id": "365f95b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1aae3c16",
+   "id": "0ded4c3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bac4095e",
+   "id": "84dc6fd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "56be0069",
+   "id": "6f25474a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9d132675",
+   "id": "99357704",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7a6df0fb",
+   "id": "13ca1cde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "469fe105",
+   "id": "3482356f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e8711c0a",
+   "id": "2989fd44",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8f66942a",
+   "id": "3633905b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,19 +1378,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "4d7c845f",
+   "execution_count": 23,
+   "id": "82d819d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "KAKAO_FRIENDS_TOKEN_SAVED_FILE = \"kakao_msg/kakao_friends_token.json\"\n",
+    "KAKAO_TOKEN_SAVED_FILE = \"kakao_msg/kakao_token.json\"\n",
     "NAVER_USER_DATA_SAVED_FILE = \"naver/account\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "f42c3f9b",
+   "execution_count": 24,
+   "id": "684a3fa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,13 +1400,13 @@
     "        \n",
     "    return token\n",
     "\n",
-    "token = load_tokens(KAKAO_FRIENDS_TOKEN_SAVED_FILE)"
+    "token = load_tokens(KAKAO_TOKEN_SAVED_FILE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b434c0d9",
+   "id": "1a664c56",
    "metadata": {},
    "outputs": [
     {
@@ -1431,15 +1431,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "에러 발생!\n",
       "카카오톡 메시지 전송 완료\n",
-      "Content-Type: multipart/mixed; boundary=\"===============8850572127203713682==\"\n",
+      "Content-Type: multipart/mixed; boundary=\"===============1864705056452066362==\"\n",
       "MIME-Version: 1.0\n",
       "Subject: =?utf-8?b?eHh4IOyXkOyEnCDqtazrp6TtlZwg6rKw7KCcIOuCtOyXreyeheuLiOuLpCE=?=\n",
       "From: prodak@naver.com\n",
       "To: prodak@naver.com\n",
       "\n",
-      "--===============8850572127203713682==\n",
+      "--===============1864705056452066362==\n",
       "Content-Type: image/jpg\n",
       "MIME-Version: 1.0\n",
       "Content-Transfer-Encoding: base64\n",
@@ -2576,7 +2575,7 @@
       "UUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUtFFABRRRQAUUUUAFFFFABRRRQAUUU\n",
       "UAFFFFABRRRQAUUUUAFFFFAH/9k=\n",
       "\n",
-      "--===============8850572127203713682==\n",
+      "--===============1864705056452066362==\n",
       "Content-Type: text/plain; charset=\"utf-8\"\n",
       "MIME-Version: 1.0\n",
       "Content-Transfer-Encoding: base64\n",
@@ -2585,7 +2584,7 @@
       "7Z2sIHh4eOulvCDrp47snbQg7J207Jqp7ZW07KO87Iuc6ri4IOuwlOuejeuLiOuLpCEKIOqwkOyC\n",
       "rO2VqeuLiOuLpCE=\n",
       "\n",
-      "--===============8850572127203713682==--\n",
+      "--===============1864705056452066362==--\n",
       "\n"
      ]
     },
@@ -2593,7 +2592,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [06/Oct/2022 17:46:37] \"GET /order-test HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [06/Oct/2022 19:25:27] \"GET /order-test HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -2610,7 +2609,7 @@
     "\n",
     "@app.route('/order-test', methods=['GET'])\n",
     "def test_email():\n",
-    "    token = load_tokens(KAKAO_FRIENDS_TOKEN_SAVED_FILE)\n",
+    "    token = load_tokens(KAKAO_TOKEN_SAVED_FILE)\n",
     "    f = open(NAVER_USER_DATA_SAVED_FILE, 'rb')\n",
     "    naver_user_info = pickle.load(f)\n",
     "    f.close()\n",
@@ -2679,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19fc2100",
+   "id": "7be3b9ba",
    "metadata": {},
    "outputs": [],
    "source": []
